Revise HTML structure and content for Day 2

--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,65 @@
-Day 2 — Lists, Emphasis & Entities
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Day 2 - Lists, Emphasis & Entities</title>
+</head>
+<body>
 
-*Today’s HTML practice focuses on:
+    <h1>Day 2: Lists, Emphasis, and Entities</h1>
+    <hr>
 
-Creating different types of lists: unordered, ordered, and description lists.
+    <!-- Unordered List -->
+    <h2>Unordered List (Favorite Fruits)</h2>
+    <ul>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>Mango</li>
+        <li>Orange</li>
+    </ul>
 
-Using text formatting tags like <em> (for emphasis) and <strong> (for importance).
+    <!-- Ordered List -->
+    <h2>Ordered List (Steps to Make Tea)</h2>
+    <ol>
+        <li>Boil water</li>
+        <li>Add tea powder</li>
+        <li>Add sugar and milk</li>
+        <li>Stir well and serve</li>
+    </ol>
 
-Learning about HTML entities (like &nbsp;, &lt;, and &gt;).
+    <!-- Description List -->
+    <h2>Description List (Programming Terms)</h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd>HyperText Markup Language – used to structure web pages.</dd>
 
-Adding abbreviations with <abbr> and title attributes.
+        <dt>CSS</dt>
+        <dd>Cascading Style Sheets – used to style web pages.</dd>
+
+        <dt>JS</dt>
+        <dd>JavaScript – adds interactivity to web pages.</dd>
+    </dl>
+
+    <!-- Text Formatting -->
+    <h2>Text Formatting Example</h2>
+    <p>
+        Learning <em>HTML</em> is the first step to becoming a <strong>Web Developer</strong>.
+        Always keep practicing&nbsp;and&nbsp;building projects!
+    </p>
+
+    <!-- HTML Entities Example -->
+    <h2>HTML Entities</h2>
+    <p>
+        Use &lt;em&gt; for emphasis and &lt;strong&gt; for importance.<br>
+        Add space using &amp;nbsp; entity.
+    </p>
+
+    <!-- Abbreviation Example -->
+    <h2>Abbreviation Example</h2>
+    <p>
+        <abbr title="Mozilla Developer Network">MDN</abbr> is a great resource for web developers to learn more about HTML, CSS, and JavaScript.
+    </p>
+
+</body>
+</html>
