Update meta tag in index5.html

--- a/index5.html
+++ b/index5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="pp">
+  <meta name="author" content="subashini">
   <meta name="description" content="Learning HTML - Day 5 Metadata and CSS">
   <title>Day 5 - Metadata and External CSS</title>
   <link rel="icon" href="img/favicon.png" type="image/png">
